--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 16px;
     color: ivory;
+}
+h1 {
+    color: white;
+    background-color: gray;
+    padding: 1em;
 }
