--- a/e-safety/e-safety-app/src/index.css
+++ b/e-safety/e-safety-app/src/index.css
@@ -43,7 +43,7 @@ h1 {
   border-radius:10%;
   border-color: #FFCB3E;
   box-shadow: 0 .2rem 1rem rgba(69, 69, 69, 0.1);
-  background-color: #FFCB3E;
+  /* background-color: #FFCB3E; */
 }
 
 .boxes {
