--- a/e-safety/e-safety-app/src/App.css
+++ b/e-safety/e-safety-app/src/App.css
@@ -14,6 +14,12 @@
   padding-bottom: 2em;
  }
 
+ #confirm {
+  position: absolute;
+  right: 10px;
+  top: 60px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
