--- a/e-safety/e-safety-app/src/index.css
+++ b/e-safety/e-safety-app/src/index.css
@@ -1,54 +1,62 @@
 body {
   margin: 0;
-  font-family: Georgia, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-button {
-  font-family: Georgia;
-  color: black;
-  border-radius:10%;
-  border-color: #FFCB3E;
-  box-shadow: 0 .2rem 1rem rgba(69, 69, 69, 0.1);
-  background-color: #FFCB3E;
-  height:50px;
-  width:100px;
+button:hover {
+    color: white;
+    background-color: #603cb5;
+    border: 2px solid black;
 }
 
 .titlebar {
-  color: #FFCB3E;
-  background-color: #7E549F !important;
-}
-
-.btn.profile {
-  font-family: Georgia;
-  color: black;
-  border-radius:10%;
-  border-color: #FFCB3E;
-  box-shadow: 0 .2rem 1rem rgba(69, 69, 69, 0.1);
-  background-color: #FFCB3E;
-  height:50px;
-  width:100px;
-}
-
-h1 {
-  margin-left: 1rem;
+  font-size: 150%;
+  color: white;
+  background-image: linear-gradient(45deg, #ffee59, #fae278, #b5a2e0, #8560db, #603cb5) !important;
 }
 
 .profile {
-  color: black;
-  border-radius:10%;
-  border-color: #FFCB3E;
-  box-shadow: 0 .2rem 1rem rgba(69, 69, 69, 0.1);
-  /* background-color: #FFCB3E; */
+  font-size: 80%;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 50px;
+  background-color: #633096;
+}
+
+.profile p {
+  font-weight: 250%;
+  color: white;
+}
+
+.nav-link ul {
+  margin-bottom: auto;
+  margin-top: auto;
+}
+
+.link {
+  textDecoration: 'none';
+}
+
+.nav-link .link :hover {
+    margin: auto;
+    padding: 10px;
+    text-align: center;
+    color: #633096;
+    background-color: #dbbef7;
+}
+
+#logout {
+  margin-right: 3rem;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 1rem;
 }
 
 .boxes {
@@ -56,30 +64,163 @@ h1 {
 }
 
 .boxes-column {
-  padding: 1em;
+  padding-right: 6em;
 }
 
 h2 {
+  font-family: Arial, Helvetica, sans-serif;
   text-align: left;
   margin-left: 8rem;
 }
 
+#summary{
+  color: #410385;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin-left: 8rem;
+}
+
+#purpose{
+  margin-right: 8rem;
+}
+
+#intro{
+  background-color: #fcfcf0;
+  margin-top: 3rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  margin-bottom: 1rem;
+  border-radius: 15px;
+  border: 4px solid #aa64fa;
+  box-shadow: 0 0 5px #8560db, 0 0 15px #c4c406;
+}
+
 .home {
+  font-family: Arial, Helvetica, sans-serif;
   color:black;
   border-radius:5%;
   background-color: #FFCB3E;
 }
 
-.report {
- margin-right: 9rem;
-
+.report-btn {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  color: black;
+  border-radius:10%;
+  background-color: #f0e371;
+  width:100px;
+  height: 30px;
+  margin-top: 0.75rem;
+  margin-bottom: 3rem;
+  padding-bottom: 3em;
+  padding-top: 0.75em;
 }
 
 h4 {
+  font-family: Arial, Helvetica, sans-serif;
   margin-left: 8rem;
   text-align: left;
 }
 
 h5{
+  font-weight: normal;
+  margin-top: 0.5rem;
+  font-family: Arial, Helvetica, sans-serif;
   color: #7E549F;
+}
+
+#welcome{
+  background: -webkit-linear-gradient(180deg,#c288f7, #6214b8, #410385 );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.report h1 {
+  color: #410385;
+}
+
+label {
+    font-weight: bold;
+    color: #410385;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    margin: 0 0 2vh 0;
+}
+
+#coord-title{
+  font-weight: bold;
+  color: #410385;
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  margin: 0 0 2vh 0;
+}
+
+#coord-note{
+  font-size: 70%;
+}
+
+#coord {
+  font-weight: normal;
+  font-size: 70%
+}
+
+#map {
+  width: 80%;
+  margin: auto;
+  padding-top: 0.5em;
+  padding-bottom: 2em;
+ }
+
+#form-btn {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  color: black;
+  border-radius:10%;
+  background-color: #f0e371;
+  width:100px;
+  height: 30px;
+  padding-bottom: 1.5em;
+  padding-top: 0.5em;
+  position: absolute;
+  right: 10px;
+  top: 60px;
+}
+
+#markers {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  color: #410385;
+}
+
+#markers strong {
+  font-family: Arial, Helvetica, sans-serif;
+  background: -webkit-linear-gradient(180deg,#c288f7, #6214b8, #410385 );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.submit-btn {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  color: white;
+  border-radius:10%;
+  background-color: #410385;
+  width:100px;
+  height: 30px;
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
+.back-btn {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  color: #410385 ;
+  border-radius:10%;
+  background-color: #f0e371;
+  width:100px;
+  height: 30px;
+  margin-left: 3rem;
+  margin-right: 3rem;
 }
